[package]

name = "mcrypt-mass-crypto"
version = "1.2.1-rc2"
edition = "2021"
description = "Mass Cryptography (mcrypt) CLI tool for high-speed bulk password hashing."
authors = ["Veeresh Hanni veereshhanni347@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Veeresh-Hanni/mcrypt"

[lib]
name = "mcrypt_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mcrypt" # ಡೆವಲಪರ್ಸ್ ಟರ್ಮಿನಲ್ ಒಳಗೆ ಬಳಸುವ ಅಸಲಿ ಕಮಾಂಡ್ ನೇಮ್
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
rand = "0.8"
rayon = "1.8" # ಮಾಸ್ ಹ್ಯಾಶಿಂಗ್ ಮಾಡಲು ಪ್ಯಾರಲಲ್ ಪ್ರೊಸೆಸಿಂಗ್ ಲೈಬ್ರರಿ
pyo3 = "0.28.3"
