[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mcrypt-mass-crypto"
version = "1.2.1-rc1"
requires-python = ">=3.7"
readme = "README.md"
description = "Mass Cryptography (mcrypt) CLI tool for high-speed bulk password hashing."
license = { text = "MIT" }
authors = [{ name = "Veeresh Hanni" }]

[project.urls]
Repository = "https://github.com/Veeresh-Hanni/mcrypt"

[tool.maturin]
module-name = "mcrypt"
features = ["pyo3/extension-module"]
